fix(src/autocomplete): add max height and overflow for list

--- a/src/autocomplete/theme.scss
+++ b/src/autocomplete/theme.scss
@@ -5,22 +5,22 @@
         border: none;
         border-bottom: 2px solid black;
         outline: none;
-
         &:focus {
             border-bottom: 2px solid blue;
         }
     }
     :local(.autocomplete-list) {
         box-sizing: border-box;
-        box-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+        max-height: 20vh;
+        overflow-y: scroll;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
         :local(.autocomplete-list-item) {
             display: block;
             box-sizing: border-box;
             padding: 2% 2%;
             box-shadow: none;
-
             &:hover {
-                background-color: #ddd; 
+                background-color: #ddd;
             }
         }
     }
